Fix: changed the color of .blogPreview h3 and translated the titles of the 3rd blogpost

--- a/languages/nl.json
+++ b/languages/nl.json
@@ -189,8 +189,8 @@
         "title": "Mijn Blog",
              "posts": {
                 "post1": {
-                    "title": "Hi there! Welkom op mijn blog",
-                    "preview": "Hallo daar en welkom op mijn blog! Ik ben erg blij dat je besloten hebt om langs te komen en mijn allereerste blogpost hier op Audromida te lezen. Deze blog is een plek waar je mijn reis kunt volgen van een overenthousiaste derdejaarsstudent Digital Design tot een professionele webdesigner/developer. Ik zal schrijven over de projecten waaraan ik werk, nieuwe dingen die ik heb geleerd, ik zal zelfs schrijven over mijn stage die ik volgend semester doe, dus kijk daarnaar uit 👀 ...",
+                    "title": "Hallo! Welkom op mijn blog",
+                    "preview": "Hallo en welkom op mijn blog! Ik ben erg blij dat je besloten hebt om langs te komen en mijn allereerste blogpost hier op Audromida te lezen. Deze blog is een plek waar je mijn reis kunt volgen van een overenthousiaste derdejaarsstudent Digital Design tot een professionele webdesigner/developer. Ik zal schrijven over de projecten waaraan ik werk, nieuwe dingen die ik heb geleerd, ik zal zelfs schrijven over mijn stage die ik volgend semester doe, dus kijk daarnaar uit 👀 ...",
                     "date": "05-10-2025",
                     "content1": "Hallo daar en welkom op mijn blog! Ik ben erg blij dat je besloten hebt om langs te komen en mijn allereerste blogpost hier op Audromida te lezen.",
                     "content2": "Daarnaast zal ik ook persoonlijke verhalen delen en hier en daar wat advies geven.",
@@ -212,7 +212,7 @@
                     "backBtn": "Terug naar Blog"
                 },
                 "post3": {
-                    "title": "Struggles of a webdesigner",
+                    "title": "De uitdagingen van een webdesginer",
                     "preview": "Wanneer ik iemand vertel dat ik Digital Experience Design studeer, is de meest voorkomende reactie die ik krijg: 'Oh, dus je werkt met computers?' en ja, dat is waar, maar het is veel meer dan dat. Een groot deel van mijn studie is het leren ontwerpen en coderen van websites en apps, wat ik absoluut geweldig vind om te doen. Echter, een van de grootste uitdagingen waar ik als webdesigner mee te maken heb is de creatieve blokkade ...",
                     "date": "22-10-2025",
                     "content": "Wanneer ik iemand vertel dat ik Digital Experience Design studeer, is de meest voorkomende reactie die ik krijg: 'Oh, dus je werkt met computers?' en ja, dat is waar, maar het is veel meer dan dat. Een groot deel van mijn studie is het leren ontwerpen en coderen van websites en apps, wat ik absoluut geweldig vind om te doen. Echter, een van de grootste uitdagingen waar ik als webdesigner mee te maken heb is de creatieve blokkade. Er zijn dagen waarop ik gewoon geen nieuwe ideeën kan bedenken voor een project, wat frustrerend is wanneer je deadlines moet halen. Het is vooral frustrerend wanneer de opdracht vereist dat ik 'out of the box' denk en met iets unieks en innovatiefs kom. Gelukkig heb ik na 3 jaar in deze opleiding enkele technieken geleerd om die creatieve blokkades te overwinnen die voor mij werken, dus ik ga ze met je delen!",
