Fix: Finished the first blogpost and changed the translations for it

--- a/languages/en.json
+++ b/languages/en.json
@@ -195,11 +195,7 @@
                     "preview": "Why hello there and welcome to my blog! I'm very happy you decided to stop by and read my very first blog post here on Audromida. This blog is a place where you can follow my journey from a overly exited Digital Design 3rd year student to a professional webdesigner/developer. I'll write about the projects I'm working on, new things I learned, I'll even write about aswell as my intern ship that I'm doing next semester so look forward to that 👀 ...",
                     "date": "05-10-2025",
                     "content1": "Why hello there and welcome to my blog! I'm very happy you decided to stop by and read my very first blog post here on Audromida.",
-                    "content2": "Besides that, I'll also share personal stories and give some advice here and there.",
-                    "content3": "A common form of Lorem ipsum reads: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.",
-                    "quote": "\"A quote from the blogpost\"",
-                    "content4": "A common form of Lorem ipsum reads: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.",
-                    "content5": "A common form of Lorem ipsum reads: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.",
+                    "content2": "Besides that, I'll also share personal stories and give some advice here and there. My life currently revolves around webdesign and development but that doesn't mean I don't have other interests aswell. So expect some random blogposts about my other hobbies too! I hope you enjoy reading my blog as much as I enjoy writing it. If you have any questions or suggestions for future blogposts, feel free to reach out to me via email that you can find in the contact section. Happy reading!",
                     "backBtn": "Back to Blog"
                 },
                 "post2": {
