--- a/languages/nl.json
+++ b/languages/nl.json
@@ -193,11 +193,8 @@
                     "preview": "Hallo en welkom op mijn blog! Ik ben erg blij dat je besloten hebt om langs te komen en mijn allereerste blogpost hier op Audromida te lezen. Deze blog is een plek waar je mijn reis kunt volgen van een overenthousiaste derdejaarsstudent Digital Design tot een professionele webdesigner/developer. Ik zal schrijven over de projecten waaraan ik werk, nieuwe dingen die ik heb geleerd, ik zal zelfs schrijven over mijn stage die ik volgend semester doe, dus kijk daarnaar uit 👀 ...",
                     "date": "05-10-2025",
                     "content1": "Hallo daar en welkom op mijn blog! Ik ben erg blij dat je besloten hebt om langs te komen en mijn allereerste blogpost hier op Audromida te lezen.",
-                    "content2": "Daarnaast zal ik ook persoonlijke verhalen delen en hier en daar wat advies geven.",
-                    "content3": "Een veelvoorkomende vorm van Lorem ipsum leest: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.",
-                    "quote": "\"Een citaat uit de blogpost\"",
-                    "content4": "Een veelvoorkomende vorm van Lorem ipsum leest: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.",
-                    "content5": "Een veelvoorkomende vorm van Lorem ipsum leest: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore."
+                    "content2": "Daarnaast zal ik ook persoonlijke verhalen delen en hier en daar wat advies geven. Mijn leven draait momenteel om webdesign en development, maar dat betekent niet dat ik geen andere interesses heb. Dus verwacht ook wat willekeurige blogposts over mijn andere hobby's! Ik hoop dat je net zo veel plezier hebt met het lezen van mijn blog als ik met het schrijven ervan. Als je vragen of suggesties hebt voor toekomstige blogposts, neem dan gerust contact met me op via e-mail die je in de contactsectie kunt vinden. Veel leesplezier!",
+                    "backBtn": "Terug naar Blog"
                 },
                 "post2": {
                     "title": "Waarom ik ben begonnen met programmeren",
