--- a/languages/en.json
+++ b/languages/en.json
@@ -55,15 +55,15 @@
         "title": "Services",
         "uiux":{
             "title": "UI/ UX Design:",
-            "desc": "I create user-friendly designs that are both easy to use and visually appealing."
+            "desc": "I design user-friendly and visually engaging interfaces that align with your audiance's needs. My focus is on clear structure, intuative interactions, and a smooth user experience."
         },
         "frontend": {
             "title": "Frontend Development",
-            "desc": "I build responsive, fast-loading websites and apps using HTML, CSS, and JavaScript."
+            "desc": "I build modern, responsive, and fast-performing websites and web applications using HTML, CSS and JavaScript. I translate designs into functional, high-quality digital products."
         },
         "3d": {
             "title": "3D Design:",
-            "desc": ">I create 3D models and animations using Blender and bring ideas to life."
+            "desc": "I create detailed 3D models, visualizations, and animations using Blender. From concept to final render, I bring ideas to life with realistic or stylized 3D visuals."
         }
     }, 
     "projects": {
