Feat: translated the "read more" links and redirected the navbar links

--- a/languages/en.json
+++ b/languages/en.json
@@ -187,7 +187,7 @@
     },
     "blog": {
         "title": "My Blog",
-        "readMore": "Continue reading ->",
+        "readMore": "Continue reading →",
         "goToPage": "View all blog posts",
         "backBtn": "Back to Blog",
             "posts": {
